--- a/Biker.html
+++ b/Biker.html
@@ -7,11 +7,13 @@
     <title>Biker</title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="biker.css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
     
     <nav class="navbar navbar-expand-lg navbar-dark" id="mainNavbar">
-        <a class="navbar-brand" href="#">OBiker</a>
+        <a class="navbar-brand" href="#"><i class="fas fa-bicycle"></i> OBiker</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
