--- a/Biker.html
+++ b/Biker.html
@@ -12,25 +12,25 @@
 </head>
 <body>
     
-  <nav class="navbar navbar-expand-lg navbar-dark" id="mainNavbar">
-      <a class="navbar-brand" href="#"><i class="fas fa-bicycle"></i> OBiker</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">Home</a>
-          <a class="nav-item nav-link" href="#">About us</a>
-          <a class="nav-item nav-link" href="#">Our services</a>
-          <a class="nav-item nav-link" href="#">Catalogue</a>
-          <a class="nav-item nav-link" href="#">Contact</a>
-        </div>
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNavbar">
+    <a class="navbar-brand" href="#"><i class="fas fa-bicycle"></i> OBiker</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#">Home</a>
+        <a class="nav-item nav-link" href="#">About us</a>
+        <a class="nav-item nav-link" href="#">Our services</a>
+        <a class="nav-item nav-link" href="#">Catalogue</a>
+        <a class="nav-item nav-link" href="#">Contact</a>
       </div>
-      <a class="nav-item d-none d-md-inline btn" href="#" role="button">Buy now</a>
+    </div>
+    <a class="nav-item d-none d-md-inline btn" href="#" id="buy-button" role="button">Buy now</a>
   </nav>
 
   <section>
-    <div class="container-fluid">
+    <div class="container-fluid mb-5" id="first-section">
       <h1 class="display-4 text-center">We know what your bike is <span class="child-span">made of</span>.</h1>
       <div class="row justify-content-center text-center">
         <div class="col-8 col-md-7 col-lg-6 col-xl-4 mt-3" id="content">
@@ -38,11 +38,24 @@
         </div>
       </div>
       <div class="text-center">
-        <a href="#" class="btn btn-lg btn-success mt-5" role="button">About us</a>
+        <a href="#" class="btn btn-sm btn-success mt-5 py-2 px-5 rounded-pill" id="about" role="button">About us</a>
       </div>
     </div>
   </section>
-    
+  <section>
+    <div class="container-fluid mt-5" id="second-section">
+      <div class="row justify-content-center">
+        <div class="col-5">
+          <p class="text-center">&mdash About us</p>
+          <h1 class="display-4 text-dark">Bicycles are our work, but also our passion.</h1>
+        </div>
+        <div class="col-5">
+
+        </div>
+      </div>
+      <div class="row justify-content-center"></div>
+    </div>
+  </section>  
     <!-- <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@bechbox?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Mikkel Bech"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Mikkel Bech</span></a> -->
 
   <script src="jquery-3.3.1.slim.min.js"></script>
