--- a/Biker.html
+++ b/Biker.html
@@ -30,8 +30,8 @@
   </nav>
 
   <section>
-    <div class="container-fluid mb-5" id="first-section">
-      <h1 class="display-4 text-center">We know what your bike is <span class="child-span">made of</span>.</h1>
+    <div class="container-fluid" id="first-section">
+      <h1 class="display-4 text-center" id="head-text">We know what your bike is <span class="child-span">made of</span>.</h1>
       <div class="row justify-content-center text-center">
         <div class="col-8 col-md-7 col-lg-6 col-xl-4 mt-3" id="content">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ant.</p>
@@ -44,13 +44,15 @@
   </section>
   <section>
     <div class="container-fluid mt-5" id="second-section">
-      <div class="row justify-content-center">
-        <div class="col-5">
-          <p class="text-center">&mdash About us</p>
-          <h1 class="display-4 text-dark">Bicycles are our work, but also our passion.</h1>
-        </div>
-        <div class="col-5">
+      <div class="row justify-content-center mt-5" id="about-us">
+        <div class="row mt-5">
+          <div class="col-5">
+            <p>&mdash About us</p>
+            <h1 class="display-4 text-dark mt-0">Bicycles are our work, but also our passion.</h1>
+          </div>
+          <div class="col-5">
 
+          </div>
         </div>
       </div>
       <div class="row justify-content-center"></div>
