--- a/Biker.html
+++ b/Biker.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="biker.css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="css/all.min.css" rel="stylesheet">
+    <!-- ------- OR ------- -->
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"> -->
+
 </head>
 <body>
     
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNavbar">
-    <a class="navbar-brand" href="#"><i class="fas fa-bicycle"></i> OBiker</a>
+    <a class="navbar-brand" href="#"><i class="fas fa-biking"></i> OBiker</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -74,6 +77,7 @@
         </div>
         <div class="col item-image1">
           <img src="markus-spiske-WUehAgqO5hE-unsplash.jpg" alt="">
+          <i class="fas fa-play"></i>
         </div>
       </div>
     </div>
